--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@
 
 plugins {
     id 'java-library'
+    id 'groovy'
 }
+
+group = 'io.curity.identityserver.plugins'
+version = '0.0.9' // Version release
+description = 'Curity Plugin Description' // Description of the plugin
 
 repositories {
     mavenLocal()
@@ -25,19 +30,25 @@ repositories {
 
 dependencies {
     compileOnly 'se.curity.identityserver:identityserver.sdk:9.2.0'
-    compileOnly 'org.slf4j:slf4j-api:1.7.36'
+    compileOnly 'org.slf4j:slf4j-api:2.0.12'
+
+    testImplementation 'se.curity.identityserver:identityserver.sdk:9.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-group = 'io.curity.identityserver.plugins.authenticator'
-java.sourceCompatibility = JavaVersion.VERSION_21
-version = '1.0.0' // Version release
-description = 'Curity Plugin Description' // Description of the plugin
 
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
 
-tasks.withType(Javadoc) {
-    options.encoding = 'UTF-8'
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "started", "passed", "skipped", "failed"
+    }
 }
+
