feat: Use tags for versioning
Remove the need for a version file or updating the build.gradle to keep the latest version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,6 @@
-name: Gradle Release Workflow
+# This workflow will build a curity-sdk-commons with Maven
+
+name: Build & Release
 
 on:
   workflow_dispatch:
@@ -13,32 +15,22 @@ jobs:
     steps:
       - name: Download code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
           cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
+      - name: Run unit tests
+        run: ./gradlew test
 
-      - name: Copy plugin jars
-        run: mkdir staging && cp build/libs/*.jar staging
-
-      - name: Build plugin artifacts zip
-        run: |
-          zip --junk-paths plugin-artifacts staging/*
-
-      - name: Upload plugin artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: plugin-artifacts.zip
-          path: plugin-artifacts.zip
 
   make_release:
     runs-on: ubuntu-latest
@@ -47,24 +39,29 @@ jobs:
 
     steps:
       - name: Download code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Conventional changelog action
         id: changelog
         uses: TriPSs/conventional-changelog-action@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          skip-on-empty: "false"
-          skip-tag: "true"
+          skip-on-empty: "true"
+          skip-commit: "true"
+          tag-prefix: ''
+          output-file: false
+          skip-version-file: "true"
+          skip-git-pull: "true"
+          fallback-version: "0.1.0"
 
-      - name: Fetch release version from build gradle file
+      - name: Fetch new version
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         run: |
-          echo "RELEASE_VERSION=$(./gradlew properties | grep "version:" | awk '{print $2}')" >> $GITHUB_ENV
-
-      - name: Download plugin artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: plugin-artifacts.zip
+          NEW_VERSION=${{ steps.changelog.outputs.version }}
+          echo "Creating new version: $NEW_VERSION"
+          echo NEW_VERSION=$NEW_VERSION >> $GITHUB_ENV
 
       - name: Create release
         id: create_release
@@ -73,14 +70,24 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: ${{ env.RELEASE_VERSION }}
+          tag_name: ${{ env.NEW_VERSION }}
+          release_name: ${{ env.NEW_VERSION }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
           draft: false
           prerelease: false
 
+      - name: Create release jars
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        run: ./gradlew createRelease -PreleaseVersion=${{ env.NEW_VERSION }}
+
+      - name: Build plugin artifacts zip
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        run: |
+          zip --junk-paths plugin-artifacts build/release/*
+
       - name: Upload release asset
         id: upload-release-asset
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
