--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,12 @@ plugins {
 }
 
 group = 'io.curity.identityserver.plugins'
-version = '0.0.9' // Version release
-description = 'Curity Plugin Description' // Description of the plugin
+description = 'Curity Plugin Description'
+if (project.hasProperty('releaseVersion')) {
+    project.version = project.releaseVersion
+} else {
+    project.version = '0.0.1'
+}
 
 repositories {
     mavenLocal()
@@ -29,10 +33,10 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'se.curity.identityserver:identityserver.sdk:10.2.1'
+    compileOnly 'se.curity.identityserver:identityserver.sdk:10.4.0'
     compileOnly 'org.slf4j:slf4j-api:2.0.12'
 
-    testImplementation 'se.curity.identityserver:identityserver.sdk:9.2.0'
+    testImplementation 'se.curity.identityserver:identityserver.sdk:10.4.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
